Fix a bug in user input detection for the site engagement service.

Sites which lazy-load resources after navigating to the main frame do
not trigger site engagement for user input. This CL fixes the bug by
reordering when the input listening callbacks are stopped.

BUG=623848

Review-Url: https://codereview.chromium.org/2104813002
Cr-Commit-Position: refs/heads/master@{#402753}

Former-commit-id: d014c1cfad770f6516556d5358f10f18e162096e